--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -8,48 +8,11 @@ html, body {
 }
 
 .landing-container {
-  height: 100vh; /* Full viewport height */
-  width: 100%; /* Full width */
+
   display: flex;
   flex-direction: column;
-  background-color: hsl(297, 68%, 94%);
+  overflow-y: auto;
 }
-  
-  /* Top container for logo and user info */
-  .top-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #fff;
-    border-radius: 0px;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .logo {
-    width: 60px;
-  }
-  
-  .user-info {
-    display: flex;
-    align-items: center;
-  }
-  
-  .user-name {
-    margin-right: 10px;
-    font-weight: bold;
-    color: #333;
-  }
-  
-  .user-avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #ccc;
-  }
-  
   /* Title container for heading and button */
   .title-container {
     display: flex;
@@ -76,6 +39,7 @@ html, body {
     cursor: pointer;
     white-space: nowrap; /* Prevent the text from wrapping */
     margin-right: 100px;
+    margin-top: 20px;
   }
   
   /* Listings Title and Marketplace Link Container */
@@ -111,6 +75,7 @@ html, body {
   /* Card Listing */
   .card-listing {
     display: flex;
+    overflow-x: auto;
     gap: 20px;
     margin-bottom: 60px;
     background-color: #fff;
@@ -121,10 +86,12 @@ html, body {
   }
   
   .card-placeholder {
-    flex: 1;
-    height: 300px;
+    /* flex: 1; */
+    height: 250px;
+    width: 200px;
     background-color: #e0e0e0;
     border-radius: 10px;
+    flex-shrink: 0;
   }
   
   /* Marketplace Listings */
@@ -140,8 +107,13 @@ html, body {
     background-color: #fff;
     padding: 10px;
     border-radius: 0px;
+    height: 280px;
     width: 200px;
     flex-shrink: 0;
+    border-radius: 10px;
+    position: relative;
+    flex-direction: column ;
+    display: flex;
   }
   
   .card-image {
@@ -150,6 +122,7 @@ html, body {
     background-color: #e0e0e0;
     margin-bottom: 10px;
     border-radius: 0px;
+    display: block; /* Ensures it behaves consistently */
   }
   
   .card-price {
@@ -170,5 +143,7 @@ html, body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: auto;
+    margin-bottom: 20px;
   }
   
