--- a/src/pages/CardpackResults.css
+++ b/src/pages/CardpackResults.css
@@ -1,48 +1,74 @@
 /* General container */
-.cardpack-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; 
-    align-items: center; 
-    height: 100vh; 
-    background-color: #f4f4f9;
-    font-family: Arial, sans-serif;
-    overflow: hidden;
-  }
-  
-  /* Content container for card pack and info */
-  .cardpack-content {
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    margin-bottom: 20px;
-  }
-  
-  .cardpack-image {
-    width: 250px;
-    margin-right: 20px; 
-    margin-left: 160px;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .cardpack-info {
-    background-color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: left; 
-    font-size: 14px;
-    color: #333;
-  }
-  
-  /* Button */
-  .open-cardpack-btn {
-    padding: 15px 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-  }
+.cardpack-results-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  height: 100vh; 
+  background-color: #f4f4f9;
+  font-family: Arial, sans-serif;
+  overflow: hidden;
+}
+
+.cardpack-results-content {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-column-gap: 40px;
+  grid-row-gap: 40px;
+  overflow-y: auto;
+  /* margin: 40px; */
+  justify-items: center;
+  margin: 40px 40px 0 40px;
+}
+
+.result-card {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 0px;
+  width: 200px;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.result-card-image {
+  width: 200px;
+  height: 200px;
+  background-color: #e0e0e0;
+  margin-bottom: 10px;
+  border-radius: 0px;
+}
+
+.card-title {
+  font-size: 0.9rem;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  padding: 20px 0;
+  margin: 25px 0;
+}
+
+/* Button */
+.open-another-cardpack-btn {
+  padding: 15px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.view-collection-btn {
+  padding: 15px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
