--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -159,7 +159,7 @@ html, body {
 }
 
 /* Marketplace Listings */
-.marketplace-listings {
+.marketplace-landing-listings {
   display: flex;
   gap: 20px;
   overflow-x: auto;
@@ -167,28 +167,33 @@ html, body {
   margin-left: 40px;
 }
 
-.marketplace-card {
+.marketplace-landing-card {
   background-color: #fff;
   padding: 10px;
   border-radius: 0px;
   width: 200px;
+  height: 300px;
   flex-shrink: 0;
+  border-radius: 10px;
+  position: relative;
+  flex-direction: column ;
+  display: flex;
 }
 
-.card-image {
+.marketplace-landing-card-image {
   width: 100%;
-  height: 100px;
+  height: 50%;
   background-color: #e0e0e0;
   margin-bottom: 10px;
   border-radius: 0px;
 }
 
-.card-price {
+.marketplace-landing-card-price {
   font-weight: bold;
   margin: 10px 0;
 }
 
-.card-title {
+.marketplace-landing-card-title {
   font-size: 0.9rem;
   color: #666;
   margin-bottom: 10px;
