--- a/src/pages/Cardpack.css
+++ b/src/pages/Cardpack.css
@@ -17,8 +17,8 @@
   margin-bottom: 20px;
 }
 
-.cardpack-image {
-  width: 250px;
+.cardpackmodel {
+  width: 100%;
   margin-right: 20px; 
   margin-left: 160px;
   border-radius: 10px;
