--- a/src/pages/Collection.css
+++ b/src/pages/Collection.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    padding: 50px 0 50px 0
 }
 
 .collections-content {
@@ -10,6 +11,7 @@
     grid-column-gap: 40px;
     grid-row-gap: 50px;
     overflow-y: auto;
+    overflow-x: hidden;
     justify-items: center;
     margin: 40px 40px 0 40px;
 }
