--- a/src/pages/Marketplace.css
+++ b/src/pages/Marketplace.css
@@ -10,6 +10,7 @@ html, body {
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    padding: 50px 0 50px 0
   }
 
 .title-container {
