--- a/src/pages/Collection.css
+++ b/src/pages/Collection.css
@@ -68,10 +68,9 @@
     flex-direction: column;
 }
 
-.collections-card-image {
-    width: 200px;
-    height: 200px;
-    background-color: #e0e0e0;
-    margin-bottom: 10px;
-    border-radius: 0px;
+.card-image {
+    width: 100%;
+    height: 100%; /* Ensures the image fills the container */
+    object-fit: cover; /* Maintains aspect ratio while filling */
+    border-radius: 10px;
 }
