--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -12,18 +12,6 @@ html, body {
   overflow-y: auto;
 }
 
-.card-container {
-  position: relative;
-  flex: 1; /* Ensures the card takes up equal space with others */
-  height: 100%; /* Takes full height of the parent container */
-  margin: 10px;
-  cursor: pointer;
-  overflow: hidden;
-  transition: transform 0.3s;
-  display: flex; /* Allows content inside to align properly */
-  flex-direction: column;
-}
-
 .card-container:hover {
   transform: scale(1.1);
 }
@@ -89,6 +77,13 @@ html, body {
   margin-left: 30px;
 }
 
+.account {
+  color: #333;
+  margin: 0;
+  text-align: left; /* Align the title to the left */
+  margin-left: 30px;
+}
+
 .buy-card-packs-btn {
   padding: 20px 60px;
   background-color: #ccc;
@@ -139,18 +134,6 @@ html, body {
   text-decoration: underline;
 }
 
-/* Card Listing */
-.card-listing {
-  display: flex;
-  gap: 20px;
-  margin-bottom: 60px;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  margin-left: 40px;
-  margin-right: 40px;
-}
-
 .card-placeholder {
   flex: 1;
   height: 300px;
@@ -159,7 +142,7 @@ html, body {
 }
 
 /* Marketplace Listings */
-.marketplace-landing-listings {
+.marketplace-landing-listings, .card-listing {
   display: flex;
   gap: 20px;
   overflow-x: auto;
@@ -167,7 +150,7 @@ html, body {
   margin-left: 40px;
 }
 
-.marketplace-landing-card {
+.marketplace-landing-card, .card-container {
   background-color: #fff;
   padding: 10px;
   border-radius: 0px;
@@ -180,7 +163,7 @@ html, body {
   display: flex;
 }
 
-.marketplace-landing-card-image {
+.marketplace-landing-card-image, .card-image {
   width: 100%;
   height: 50%;
   background-color: #e0e0e0;
