--- a/src/pages/Marketplace.css
+++ b/src/pages/Marketplace.css
@@ -64,7 +64,6 @@ font-weight: bold;
 display: grid;
 grid-template-columns: repeat(auto-fill, minmax(max(200px, 15%), 1fr));
 gap: 20px;
-overflow-y: auto;
 margin: 40px;
 flex-direction: column;
 justify-items: center;
@@ -75,7 +74,7 @@ background-color: #fff;
 padding: 10px;
 border-radius: 0px;
 width: 200px;
-height: 300px;
+height: 200px;
 flex-shrink: 0;
 border-radius: 10px;
 position: relative;
@@ -91,6 +90,11 @@ margin-bottom: 10px;
 border-radius: 0px;
 }
 
+
+.marketplace-landing-card-image{
+  height: 85%;
+  gap: 30px;
+}
 .card-price {
 font-weight: bold;
 margin: 10px 0;
