--- a/src/pages/Collection.css
+++ b/src/pages/Collection.css
@@ -13,7 +13,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     justify-items: center;
-    margin: 40px 40px 0 40px;
+    margin: 20px 40px 20px 40px;
 }
 
 .title-container {
@@ -61,7 +61,7 @@
 .collections-card {
     background-color: #fff;
     padding: 10px;
-    border-radius: 0px;
+    border-radius: 10px;
     width: 200px;
     flex-shrink: 0;
     display: flex;
